chapters-04-networking/orion-workload.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orion
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion-api
  namespace: orion
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: orion-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: orion-api
    spec:
      containers:
        - name: api
          image: orion-api:lab
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 96Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      volumes:
        - name: tmp
          emptyDir: {}
