chapters-04-networking/orion-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-clusterip
  namespace: orion
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: orion-api
  ports:
    - name: http
      port: 80
      targetPort: http
