chapters-04-networking/orion-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-nlb
  namespace: orion
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: orion-api
  ports:
    - name: http
      port: 80
      targetPort: http
