chapters-04-networking/orion-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-nodeport
  namespace: orion
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: orion-api
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
