chapters-04-networking/service-broken-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion-broken
  namespace: orion
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: does-not-exist
  ports:
    - name: http
      port: 80
      targetPort: http
