chapters-04-networking/orion-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orion
  namespace: orion
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: api.orion.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orion-clusterip
                port:
                  name: http
